--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node benchmark.js",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -30,5 +30,8 @@
     "pino-pretty": "^9.1.1",
     "socket.io": "^4.5.3",
     "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "autocannon": "^7.10.0"
   }
 }
